# structures_algorithms_laboratories_2

./: README.md  pyproject.toml
structures_algorithms_laboratories_2/structures/: deque.py  stack.py
structures_algorithms_laboratories_2/tasks/: task_0.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py
structures_algorithms_laboratories_2/utils/: __init__.py  print_list.py
