[tool.poetry]
name = "structures_algorithms_laboratories_2"
version = "0.1.0"
description = ""
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task_0 = "structures_algorithms_laboratories_2.tasks.task_0:__start__"
task_1 = "structures_algorithms_laboratories_2.tasks.task_1:__start__"
task_2 = "structures_algorithms_laboratories_2.tasks.task_2:__start__"
task_3 = "structures_algorithms_laboratories_2.tasks.task_3:__start__"
task_4 = "structures_algorithms_laboratories_2.tasks.task_4:__start__"
task_5 = "structures_algorithms_laboratories_2.tasks.task_5:__start__"
task_6 = "structures_algorithms_laboratories_2.tasks.task_6:__start__"